# mlops-abha

./: README.md
.github/workflows/: part-e-pytest.yml
Part-A/: README.md  pyproject.toml
Part-A/cupguard/data/raw/: goalscorers.csv
Part-A/cupguard/src/: pipeline.py  worldcup_agent_app.py
Part-B/: Dockerfile  README.md
Part-B/cupguard/data/processed/: team_stats_2025.csv
Part-B/cupguard/models/: outcome_classes.json  outcome_model.pkl
Part-B/cupguard/src/: pipeline.py  worldcup_agent_app.py
Part-C/: Dockerising_Foundation_Models.ipynb  pyproject.toml
Part-D/: README.md  cache_predictions.py  pyproject.toml
Part-E/: README.md  pyproject.toml
Part-E/tests/: test_cupguard.py
