[project]
name = "mlops-part-d-redis"
version = "0.1.0"
description = "Part D — Redis cache lab for CupGuard predictions"
requires-python = ">=3.10,<3.13"
dependencies = [
  "redis>=5.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0",
  "scikit-learn>=1.5.0",
  "joblib>=1.4.0",
  "pyyaml>=6.0.0",
  "matplotlib>=3.8.0",
  "streamlit>=1.38.0",
  "mlflow>=2.16.0",
  "great-expectations>=0.18.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "scipy>=1.13.0",
]

[tool.uv]
package = false
